# poketex

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: CI.yml  release.yml
colorscripts/large/regular/: abomasnow  abomasnow-mega  abra  absol  absol-mega  accelgor  aegislash  aegislash-blade  aerodactyl  aerodactyl-mega  aggron  aggron-mega  aipom  alakazam  alakazam-mega  alcremie  alcremie-caramel-swirl-berry  alcremie-caramel-swirl-clover  alcremie-caramel-swirl-flower  alcremie-caramel-swirl-love  alcremie-caramel-swirl-plain  alcremie-caramel-swirl-ribbon  alcremie-caramel-swirl-star  alcremie-caramel-swirl-strawberry  alcremie-gmax  alcremie-lemon-cream-berry  alcremie-lemon-cream-clover  alcremie-lemon-cream-flower  alcremie-lemon-cream-love  alcremie-lemon-cream-plain  alcremie-lemon-cream-ribbon  alcremie-lemon-cream-star  alcremie-lemon-cream-strawberry  alcremie-matcha-cream-berry  alcremie-matcha-cream-clover  alcremie-matcha-cream-flower  alcremie-matcha-cream-love  alcremie-matcha-cream-plain  alcremie-matcha-cream-ribbon  alcremie-matcha-cream-star  (+1417 more)
colorscripts/large/shiny/: abomasnow  abomasnow-mega  abra  absol  absol-mega  accelgor  aegislash  aegislash-blade  aerodactyl  aerodactyl-mega  aggron  aggron-mega  aipom  alakazam  alakazam-mega  alcremie-caramel-swirl-berry  alcremie-caramel-swirl-strawberry  alcremie-gmax  alcremie-lemon-cream-clover  alcremie-lemon-cream-love  alcremie-mint-cream-star  alcremie-rainbow-swirl-flower  alcremie-ruby-cream-ribbon  alcremie-ruby-swirl-plain  alomomola  altaria  altaria-mega  amaura  ambipom  amoonguss  ampharos  ampharos-mega  annihilape  anorith  appletun  applin  araquanid  arbok  arboliva  arcanine  (+1351 more)
colorscripts/small/regular/: abomasnow  abomasnow-mega  abra  absol  absol-mega  accelgor  aegislash  aegislash-blade  aerodactyl  aerodactyl-mega  aggron  aggron-mega  aipom  alakazam  alakazam-mega  alcremie  alcremie-caramel-swirl-berry  (+1437 more)
data/: ability.json  ascii.json  data.json
doc/: demo.tape
src/: ability.rs  args.rs  assets.rs  constant.rs  data.json  env.rs  keybinding.rs  lib.rs  main.rs  pokemon.rs  ui.rs  util.rs
src/data/: ability.json  data.json
src/pokemon/: ability.rs  ascii_form.rs  mod.rs  pokemon.rs  translate.rs
src/state/: mod.rs  pokemon.rs  scroll.rs  tui.rs
src/ui/: iv.rs  mod.rs  pokemon.rs  util.rs
src/widget/: ability.rs  dex.rs  filter.rs  help.rs  iv.rs  metainfo.rs  mod.rs  pmlist.rs  pokemon_list.rs  topinfo.rs
(+1398 files in other folders)
