[package]
name = "poketex"
authors = ["CK Aznable"]
description = "Simple Pokedex based on TUI(Terminal User Interface)"
homepage = "https://github.com/ckaznable/poketex"
repository = "https://github.com/ckaznable/poketex"
keywords = ["tui", "pokemon", "pokedex"]
exclude = [".github/"]
categories = ["visualization"]
license = "MIT"
readme = "README.md"
version = "1.3.0"
edition = "2021"

[dependencies]
ratatui = "0.22.0"
tui-input = "0.7.0"
crossterm = "0.26.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3.0"
lazy_static = "1.4"
clap = { version = "4.1.4", features = ["derive"] }

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'