[package]
name = "poketex"
authors = ["CK Aznable"]
description = "Simple Pokedex based on TUI(Terminal User Interface)"
homepage = "https://github.com/ckaznable/poketex"
repository = "https://github.com/ckaznable/poketex"
keywords = ["tui", "pokemon", "pokedex"]
exclude = [".github/"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
version = "1.11.2"
edition = "2021"

[dependencies]
ratatui = "=0.25.0"
tui-input = "=0.8.0"
crossterm = "=0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3.1"
lazy_static = "1.4"
clap = { version = "4.4.7", features = ["derive"] }
regex = "1.10.2"
textwrap = "0.16.0"
ansi-to-tui = "~3.1.0"
anyhow = "1.0.79"
xdg = "2.5.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
